{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 4677,
  "lineage": "5caa320e-89a4-4a96-d5d8-2facb55891c0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_eks_tester_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069057294951:security-group/sg-0539c3e8343df14cb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0539c3e8343df14cb",
            "ingress": [],
            "name": "terraform-2025031712045863050000000b",
            "name_prefix": "terraform-",
            "owner_id": "069057294951",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e267e79cc05608d9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069057294951:security-group/sg-023e6fcfa03138255",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes to communicate with the internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023e6fcfa03138255",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fbe938f886eac1b8"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fbe938f886eac1b8"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "node-security-group",
            "name_prefix": "",
            "owner_id": "069057294951",
            "revoke_rules_on_delete": false,
            "tags": {
              "karpenter.sh/discovery": "car-dev-eksdemo",
              "kubernetes.io/cluster/car-dev-eksdemo": "owned"
            },
            "tags_all": {
              "karpenter.sh/discovery": "car-dev-eksdemo",
              "kubernetes.io/cluster/car-dev-eksdemo": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e267e79cc05608d9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.eks_master_role",
            "aws_iam_role_policy_attachment.eks-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.eks-AmazonEKSVPCResourceController",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069057294951:internet-gateway/igw-0d575eb3778b27c96",
            "id": "igw-0d575eb3778b27c96",
            "owner_id": "069057294951",
            "tags": {
              "Name": "car-dev-us-east-1",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-us-east-1",
              "environment": "dev",
              "owners": "car"
            },
            "vpc_id": "vpc-0e267e79cc05608d9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069057294951:subnet/subnet-0af7a3ee2729d9af9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.59.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af7a3ee2729d9af9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "069057294951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "car-dev-us-east-1-private-us-east-1a",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-us-east-1-private-us-east-1a",
              "environment": "dev",
              "owners": "car"
            },
            "vpc_id": "vpc-0e267e79cc05608d9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069057294951:subnet/subnet-0641f4dd5716c4cd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.59.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0641f4dd5716c4cd6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "069057294951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "car-dev-us-east-1-private-us-east-1b",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-us-east-1-private-us-east-1b",
              "environment": "dev",
              "owners": "car"
            },
            "vpc_id": "vpc-0e267e79cc05608d9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069057294951:subnet/subnet-02833644bab065c7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.59.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02833644bab065c7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "069057294951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "car-dev-us-east-1-public-us-east-1a",
              "environment": "dev",
              "karpenter.sh/discovery": "car-dev-eksdemo",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-us-east-1-public-us-east-1a",
              "environment": "dev",
              "karpenter.sh/discovery": "car-dev-eksdemo",
              "owners": "car"
            },
            "vpc_id": "vpc-0e267e79cc05608d9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069057294951:subnet/subnet-03778e10224e7e0f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.59.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03778e10224e7e0f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "069057294951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "car-dev-us-east-1-public-us-east-1b",
              "environment": "dev",
              "karpenter.sh/discovery": "car-dev-eksdemo",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-us-east-1-public-us-east-1b",
              "environment": "dev",
              "karpenter.sh/discovery": "car-dev-eksdemo",
              "owners": "car"
            },
            "vpc_id": "vpc-0e267e79cc05608d9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:069057294951:vpc/vpc-0e267e79cc05608d9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.59.0.0/16",
            "default_network_acl_id": "acl-039b61514f2f46069",
            "default_route_table_id": "rtb-0d99c496c24a63b63",
            "default_security_group_id": "sg-04766e2547153838b",
            "dhcp_options_id": "dopt-cd3276b6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e267e79cc05608d9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d99c496c24a63b63",
            "owner_id": "069057294951",
            "tags": {
              "Name": "car-dev-us-east-1",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-us-east-1",
              "environment": "dev",
              "owners": "car"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}